--- a/CLang_02/CLang_02.vcxproj
+++ b/CLang_02/CLang_02.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f93dc8b7-273c-4f4b-8b37-ea89869ca9b0}</ProjectGuid>
-    <RootNamespace>CLang01</RootNamespace>
+    <ProjectGuid>{0ccef4d7-4cd2-4c38-94d2-b8471f07787a}</ProjectGuid>
+    <RootNamespace>CLang02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Stack.cpp" />
+    <ClCompile Include="Queue.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
