--- a/PracticeProject_1/PracticeProject_1.vcxproj
+++ b/PracticeProject_1/PracticeProject_1.vcxproj
@@ -124,7 +124,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../../lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>DirectXTex.lib;box2d.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>DirectXTex.lib;box2d.lib;winmm.lib;d2d1.lib;dwrite.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -145,7 +145,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="MyDevice.h" />
+    <ClInclude Include="MyDxWrite.h" />
     <ClInclude Include="MyGameCore.h" />
+    <ClInclude Include="MyInput.h" />
     <ClInclude Include="MyMain.h" />
     <ClInclude Include="MyPlaneShape.h" />
     <ClInclude Include="MyStd.h" />
@@ -155,7 +157,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyDevice.cpp" />
+    <ClCompile Include="MyDxWrite.cpp" />
     <ClCompile Include="MyGameCore.cpp" />
+    <ClCompile Include="MyInput.cpp" />
     <ClCompile Include="MyMain.cpp" />
     <ClCompile Include="MyPlaneShape.cpp" />
     <ClCompile Include="MyTextureMgr.cpp" />
@@ -163,12 +167,16 @@
     <ClCompile Include="MyWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\data\shader\effect.txt" />
-    <Text Include="..\..\data\shader\object.txt" />
-    <Text Include="..\..\data\shader\Shader.txt" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <Text Include="..\..\data\shader\effect.txt" />
+    <Text Include="..\..\data\shader\object.txt" />
+    <Text Include="..\..\data\shader\shader.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">VS</EntryPointName>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+    </Text>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
