--- a/PracticeProject_1/PracticeProject_1.vcxproj.filters
+++ b/PracticeProject_1/PracticeProject_1.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MyInput.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MyPlayerObj.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyWindow.cpp">
@@ -75,6 +78,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="MyInput.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MyPlayerObj.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
