20240528 GameCore 리팩토링 및 Font 기능 구현

--- a/CreateWriter/CreateWriter.vcxproj
+++ b/CreateWriter/CreateWriter.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="MyCore.h" />
     <ClInclude Include="MyDevice.h" />
     <ClInclude Include="MyInput.h" />
+    <ClInclude Include="MyStd.h" />
     <ClInclude Include="MyTimer.h" />
     <ClInclude Include="MyWindow.h" />
     <ClInclude Include="MyWriterFont.h" />
