Collision 기능 구현 DxObject 클래스에서 Vertex 와 Position 관련 부분 Acter 클래스로 이관 (DxObject 에는 렌더 관련 코드만 남김)
Collision 클래스 Sample 클래스에 연결하고 UIList 에 조건문으로 테스트 (마우스 호버링시 ui 사라지게) (Sample의 Frame, Render 수정)

TODO 리스트 메모장 추가

--- a/CreateMovement_0/CreateMovement_0.vcxproj
+++ b/CreateMovement_0/CreateMovement_0.vcxproj
@@ -144,6 +144,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MyCollision.cpp" />
     <ClCompile Include="Sample.cpp" />
     <ClCompile Include="MyActer.cpp" />
     <ClCompile Include="MyCore.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="MyWriterFont.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MyCollision.h" />
     <ClInclude Include="Sample.h" />
     <ClInclude Include="MyActer.h" />
     <ClInclude Include="MyCore.h" />
