acter 클래스 오타 수정 (actor) collision RECT 의 기준값을 포지션값에서 정점좌표로 변경 npc collision 추가 텍스쳐 변경을 위해 prerender postrender 로 DXObeject::Render 구조 변경 npc 카운터에 따라 줄어드는 숫자 ui 구현 m_bGameRun 변수를 추가하여 게임 엔딩 구현 npccounter 에서 음수값이 나오지 않게 max 매크로로 안전장치 추가

--- a/CreateMovement_0/CreateMovement_0.vcxproj
+++ b/CreateMovement_0/CreateMovement_0.vcxproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <ClCompile Include="MyCollision.cpp" />
     <ClCompile Include="Sample.cpp" />
-    <ClCompile Include="MyActer.cpp" />
+    <ClCompile Include="MyActor.cpp" />
     <ClCompile Include="MyCore.cpp" />
     <ClCompile Include="MyDevice.cpp" />
     <ClCompile Include="MyDxObject.cpp" />
@@ -159,7 +159,7 @@
   <ItemGroup>
     <ClInclude Include="MyCollision.h" />
     <ClInclude Include="Sample.h" />
-    <ClInclude Include="MyActer.h" />
+    <ClInclude Include="MyActor.h" />
     <ClInclude Include="MyCore.h" />
     <ClInclude Include="MyDevice.h" />
     <ClInclude Include="MyDxObject.h" />
