--- a/PlaySound/PlaySound.vcxproj.filters
+++ b/PlaySound/PlaySound.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="MyShaderMgr.cpp">
       <Filter>Manager</Filter>
     </ClCompile>
+    <ClCompile Include="MySound.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
@@ -66,6 +67,7 @@
     <ClInclude Include="MyShaderMgr.h">
       <Filter>Manager</Filter>
     </ClInclude>
+    <ClInclude Include="MySound.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="HLSL">
