인게임 텍스처 수정 캐릭터 및 카메라 범위 바깥으로 안나가게 수정 캐릭터 스프라이트 애니메이션 추가 및 좌우 스프라이트 반전 기능 추가

--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
@@ -12,7 +12,6 @@
     <ClCompile Include="MyDxObject.cpp" />
     <ClCompile Include="MyInput.cpp" />
     <ClCompile Include="MyMath.cpp" />
-    <ClCompile Include="MyPawn.cpp" />
     <ClCompile Include="MyShaderMgr.cpp" />
     <ClCompile Include="MySound.cpp" />
     <ClCompile Include="MySprite.cpp" />
@@ -25,9 +24,6 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="MySceneLobby.cpp">
-      <Filter>Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="MySceneIngame.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="MyScene.cpp">
@@ -45,6 +41,10 @@
     <ClCompile Include="MyNpc.cpp">
       <Filter>Object</Filter>
     </ClCompile>
+    <ClCompile Include="MySceneIngame.cpp" />
+    <ClCompile Include="MyPawn.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
@@ -55,7 +55,6 @@
     <ClInclude Include="MyDxObject.h" />
     <ClInclude Include="MyInput.h" />
     <ClInclude Include="MyMath.h" />
-    <ClInclude Include="MyPawn.h" />
     <ClInclude Include="MyShaderMgr.h" />
     <ClInclude Include="MySound.h" />
     <ClInclude Include="MySprite.h" />
@@ -87,6 +86,9 @@
       <Filter>Object</Filter>
     </ClInclude>
     <ClInclude Include="MyNpc.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="MyPawn.h">
       <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
