--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
@@ -158,7 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="MyActor.cpp" />
     <ClCompile Include="MyBaseManager.cpp" />
     <ClCompile Include="MyCamera.cpp" />
@@ -220,6 +220,9 @@
   <ItemGroup>
     <Text Include="..\..\data\Sprite\SpriteInfo.txt" />
     <Text Include="intro.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
