무기 시스템 구현 및 채찍 무기 추가(class MyWeaponWhip) MySceneIngame 의 Render 에서 채찍 스프라이트 지속시간 및 쿨타임 시스템 구현 (미완성)

--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="MySprite.cpp" />
     <ClCompile Include="MyTexMgr.cpp" />
     <ClCompile Include="MyTimer.cpp" />
+    <ClCompile Include="MyWeaponWhip.cpp" />
     <ClCompile Include="MyWindow.cpp" />
     <ClCompile Include="MyWriterFont.cpp" />
   </ItemGroup>
@@ -209,6 +210,7 @@
     <ClInclude Include="MyStd.h" />
     <ClInclude Include="MyTexMgr.h" />
     <ClInclude Include="MyTimer.h" />
+    <ClInclude Include="MyWeaponWhip.h" />
     <ClInclude Include="MyWindow.h" />
     <ClInclude Include="MyWriterFont.h" />
   </ItemGroup>
