몬스터 피격 처리 및 채찍 스프라이트 플레이어 좌우 이동에 따른 좌우 반전 동기화 구현

--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
@@ -101,9 +101,11 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\data\Sprite\SpriteInfo.txt" />
     <Text Include="intro.txt">
       <Filter>Scene</Filter>
+    </Text>
+    <Text Include="..\..\resource\SpriteInfo.txt">
+      <Filter>Object</Filter>
     </Text>
   </ItemGroup>
   <ItemGroup>
