--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
@@ -220,7 +220,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\data\Sprite\SpriteInfo.txt" />
+    <Text Include="..\..\resource\SpriteInfo.txt" />
     <Text Include="intro.txt" />
   </ItemGroup>
   <ItemGroup>
