캐릭터 피격 판정 이펙트 구헌 (버그 수정 필요) 캐릭터 하단 hp 바 구현 (버그 수정 필요)

--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj.filters
@@ -2,6 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <FxCompile Include="Alphablend.hlsl" />
+    <FxCompile Include="Player.hlsl">
+      <Filter>Object</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyBaseManager.cpp" />
