--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
@@ -218,10 +218,15 @@
     <FxCompile Include="Alphablend.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </FxCompile>
+    <FxCompile Include="Player.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\resource\SpriteInfo.txt" />
-    <Text Include="intro.txt" />
+    <Text Include="intro.txt">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
