게임오버씬 추가, bgm 추가, bgm 변경 로직 수정, 텍스트렌더 함수 구현, 게임일시정지 기능 구현(실제 사용x) 게임오버씬 추가 bgm 추가 bgm 변경 로직 수정 (Main.cpp)

--- a/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
+++ b/VampireSurvivorsReplica/VampireSurvivorsReplica.vcxproj
@@ -172,6 +172,9 @@
     <ClCompile Include="MyNpc.cpp" />
     <ClCompile Include="MyPawn.cpp" />
     <ClCompile Include="MyScene.cpp" />
+    <ClCompile Include="MySceneGameover.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="MySceneIngame.cpp" />
     <ClCompile Include="MySceneLobby.cpp" />
     <ClCompile Include="MySceneResult.cpp" />
@@ -200,6 +203,9 @@
     <ClInclude Include="MyNpc.h" />
     <ClInclude Include="MyPawn.h" />
     <ClInclude Include="MyScene.h" />
+    <ClInclude Include="MySceneGameover.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="MySceneIngame.h" />
     <ClInclude Include="MySceneLobby.h" />
     <ClInclude Include="MySceneResult.h" />
